[metadata]
description-file = README.md

[pycodestyle]
ignore=E501, E303
max_line_length=110

[mypy]
python_version = 3.6
show_column_numbers = True
; Suppress error messages about imports that cannot be resolved (PEP-561 non-complient packages):
ignore_missing_imports = True
; Report an error whenever it encounters a function definition without type annotations:
disallow_untyped_defs = True
; Disallow calling functions without type annotations in the scope of annotated functions:
disallow_untyped_calls = True
; Require from arguments with a None default value to be explicitly Optional:
no_implicit_optional = True
; Report an err whenever code uses a # type: ignore comment on a line that is not actually generating an error message:
warn_unused_ignores = True
; In order to avoid bugs and confusion don't use mypy cache:
incremental = False
